--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,29 @@
     <string name="ios">iOS</string>
     <string name="contact">Contact</string>
     <string name="settings">Settings</string>
-    <!--    <string name="todo">TODO</string>-->
+    <string name="log_in">Log In</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="login">LOGIN</string>
+    <string name="create_an_account">Create An Account</string>
+    <string name="this_project_is_about_news_and_information">abouts</string>
+    <string name="welcome">Welcome</string>
+    <string name="search_movies">Search Movies</string>
+    <string name="currency_exchange">Currency Exchange</string>
+    <string name="memes">Memes</string>
+    <string name="news">News</string>
+    <string name="you_are_ready_to_go">You are Ready To GO!</string>
+    <string name="we_do_like_aliens">We do Like Aliens!!!</string>
+    <string name="movie">Search Movie and \n TV shows here</string>
+    <string name="searchs">Search</string>
+    <string name="account">Create New Account</string>
+    <string name="enter">Enter Email ID</string>
+    <string name="pswd">Enter Password</string>
+    <string name="logins">Login</string>
+    <string name="signups">Signup</string>
+    <string name="weather">Weather</string>
+    <string name="pressure">Pressure</string>
+    <string name="sunset">Sunset</string>
+    <string name="parthiban">Parthiban</string>
+    <string name="contacting">CONTACT</string>
+<!--    <string name="todo">TODO</string>-->
 </resources>
